force-app/main/default/objects/ssot__LoyaltyBenefit__dlm/fields/ssot__BenefitStatusId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BenefitStatusId__c</fullName>
    <label>Benefit Status</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BenefitStatusId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>