force-app/main/default/objects/ssot__LoyaltyBenefit__dlm/fields/ssot__LoayaltyBenefitPriorityNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoayaltyBenefitPriorityNumber__c</fullName>
    <label>Loayalty Benefit Priority Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoayaltyBenefitPriorityNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>