force-app/main/default/objects/ssot__LoyaltyBenefit__dlm/fields/ssot__LoyaltyBenefitUOM__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoyaltyBenefitUOM__c</fullName>
    <label>Loyalty Benefit UOM</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoyaltyBenefitUOM</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>