force-app/main/default/objects/ssot__LoyaltyBenefit__dlm/fields/ssot__LoyaltyBenefitValueText__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoyaltyBenefitValueText__c</fullName>
    <label>Loyalty Benefit Value</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoyaltyBenefitValueText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>