force-app/main/default/objects/ssot__LoyaltyBenefit__dlm/fields/ssot__rel_1697761154388_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761154388_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BenefitAction_Id_map_LoyaltyBenefit__rel</label>
    <referenceTo>ssot__BenefitAction__dlm</referenceTo>
    <relationshipLabel>BenefitAction_Id_map_LoyaltyBenefit__rel</relationshipLabel>
    <relationshipName>rel_1697761154388_end</relationshipName>
    <type>Lookup</type>
</CustomField>