force-app/main/default/objects/ssot__LoyaltyBenefit__dlm/fields/ssot__rel_1697761179189_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761179189_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyBenefit_BenefitActionId_map_B_rel</label>
    <referenceTo>ssot__BenefitAction__dlm</referenceTo>
    <relationshipLabel>LoyaltyBenefit_BenefitActionId_map_B_rel</relationshipLabel>
    <relationshipName>rel_1697761179189_end</relationshipName>
    <type>Lookup</type>
</CustomField>