force-app/main/default/objects/ssot__LoyaltyBenefit__dlm/fields/ssot__rel_1697761179503_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761179503_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyBenefit_LoyaltyBenefitTypeId__rel</label>
    <referenceTo>ssot__LoyaltyBenefitType__dlm</referenceTo>
    <relationshipLabel>LoyaltyBenefit_LoyaltyBenefitTypeId__rel</relationshipLabel>
    <relationshipName>rel_1697761179503_end</relationshipName>
    <type>Lookup</type>
</CustomField>